--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# Project dependencies
-.cache
-node_modules
-yarn-error.log
-
-# Build directory
-/public
 .DS_Store
-prepros-6.config
-*.scss
+/node_modules/
+/src/node_modules/@sapper/
+yarn-error.log
+/cypress/screenshots/
+/__sapper__/
