--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "maintained node versions"
   ],
   "scripts": {
-    "dev": "ssg dev",
-    "build": "sapper build --legacy --ext '.svelte .svx'",
-    "export": "sapper export --legacy --ext '.svelte .svx'",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "dev": "sapper dev --ext '.svelte .svx'",
+    "build": "sapper export --ext '.svelte .svx'",
+    "serve": "serve __sapper__/export",
+    "start": "run-s build serve"
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "d3": "^5.16.0",
     "date-fns": "^2.13.0",
     "polka": "next",
+    "serve": "^11.3.0",
     "sirv": "^0.4.0",
     "ssg": "0.0.62"
   },
@@ -31,11 +30,13 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "autoprefixer": "^9.7.6",
     "fs-extra": "^9.0.0",
     "gray-matter": "^4.0.2",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "mdsvex": "^0.4.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.29",
@@ -49,6 +50,7 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
+    "sharp": "^0.25.2",
     "svelte": "^3.0.0",
     "svelte-i-pack": "^0.2.8",
     "svelte-image": "^0.2.1",
