--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "date-fns": "^2.13.0",
     "polka": "next",
     "serve": "^11.3.0",
-    "sirv": "^0.4.0",
+    "sirv": "^0.4.0"
+  },
+  "optionalDependencies": {
     "ssg": "0.0.62"
   },
   "devDependencies": {
